--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
           <ul>
             <li><a href="#">over de Boek</a></li>
             <li><a href="#">CSS Properties</a></li>
-            <li><a href="#">CSS Tips</a></li>
+            <li><a href="#">CSS Tricks</a></li>
             <li><a href="#">CSS Gotchas</a></li>
             <li><a href="#">Contact Us</a></li>
           </ul>
