--- a/html/index.html
+++ b/html/index.html
@@ -37,6 +37,7 @@
             </p>
             <p>
              Het is niet altijd zo simpel precies, poging 2
+			 Pull request komt VOOR de merge
             </p>
             <p>
               Suspendisse vitae quam lorem, in tempus velit. Sed vitae ante quis
